# resvi

./: .env.example  .gitignore  App.tsx  README.md  codesigning.pfx  index.css  index.html  index.tsx  jest.config.js  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
android/: capacitor.settings.gradle
capacitor.configs/: capacitor.config.admin.ts  capacitor.config.pos.ts
components/: AuthCallbackHandler.tsx  Cart.tsx  Footer.tsx  GoogleAnalyticsTracker.tsx  Header.tsx  MenuSelection.tsx  MessageModal.tsx  OrderFormModal.tsx  OrderResultModal.tsx  OrderSummary.tsx  PaymentForm.tsx  UpdateHandler.tsx
constants/: delivery.ts
context/: AdminContext.tsx  AlertContext.tsx  MenuContext.tsx  OfflineContext.tsx  OrderContext.tsx  POSContext.tsx  SettingsContext.tsx  SipContext.tsx
data/: menu.ts
hooks/: useAutoRefresh.ts
pages/: AboutPage.tsx  BookingMenuStep.tsx  BookingPage.tsx  ContactPage.tsx  CustomerMenuPage.tsx  HomePage.tsx  MenuPage.tsx  OrderPage.tsx  POSPage.tsx  ReservationPage.test.tsx  ReservationPage.tsx  TermsPage.tsx
scripts/: build-tauri.js  diagnose-sign.js  mobile-env.js  sign.js  sync-version.js
services/: ReceiptService.ts  StationService.ts
sql_scripts/: 01_schema_changes.sql  02_update_create_booking.sql  03_refactor_preorder_column.sql  04_add_menu_pdf_url.sql  05_setup_storage.sql  100_burger_extras.sql  (+123 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  printer.rs
(+111 files in other folders)
