[package]
name = "app"
version = "0.1.0"
description = "A Resvi App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-log = "2.0.0"
tauri-plugin-updater = "2.0.0"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6"
image = "0.24"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
tauri-plugin-process = "2.3.1"
